Server runs, control is WIP

--- a/config.cfg
+++ b/config.cfg
@@ -1,19 +1,24 @@
 [MOTOR_0]
 pulse_pin = 21
 direction_pin = 20
+steps = 900
 
 [MOTOR_1]
 pulse_pin = 16
 direction_pin = 12
+steps = 900
 
 [MOTOR_2]
 pulse_pin = 1
 direction_pin = 7
+steps = 900
 
 [MOTOR_3]
 pulse_pin = 8
 direction_pin = 25
+steps = 900
 
 [MOTOR_4]
 pulse_pin = 18
 direction_pin = 23
+steps = 900
